--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=local
 
-server.port=8080
+#server.port=8080
 
 
-server.context-path=/auth
+#server.context-path=/auth
 
 
 security.oauth2.resource.filter-order = 3
