--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.data.mongodb.database=local
 #server.port=8080
 
 
-#server.context-path=/auth
+server.context-path=/uaa
 
 
 security.oauth2.resource.filter-order = 3
+security.sessions= if-required
